Update me.html - img srce

--- a/me.html
+++ b/me.html
@@ -14,11 +14,12 @@
 <body>
     <div class="container mt-2">
         <p>your site is...mid</p>
-        <img class="mb-4" src="/week3-portfolio-prjct/resources/imgs/thumbs-up-kid.jpeg" alt="image of that one 90's kid with a thumbs up">
+        <img class="mb-4" src="thumbs-up-kid.jpeg" alt="image of that one 90's kid with a thumbs up">
         <p>this might be you after visiting my 'homework' prjct, not realizing i put waaay too much time into. like a lot of time, like an incredibly long long hour project that it took me days to finish. emphasis on dayssss. like, its making me rethink my life decisions. like, if it takes me this long to make something like this, should i continue pursuing this career change...? idk.
             <br>
             but if you made it this far, and have read to this very sentence i thank you! and would like to ask you a favor, if you read through my little shpeal, copy & paste the img above onto the #general-chat convo on discord. no context, no filler, just this img. id like to see how many of you will do it...have a blessed day! 
         </p>
     </div>
 </body>
+
 </html>
