Update index.html - inner html linking

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         <p>&copy;2024 Joseandres Valencia, Crafting digital experiences with passion and precision.</p>
         <!-- insert back to top button below HERE -->
         <a href="#nav-nav" class="btn btn-outline-light"><span class="icon">icon</span>Back to Top</a>
-        <a href="/week3-portfolio-prjct/me.html" class="btn btn-outline-secondary">dont click me</a>
+        <a href="me.html" class="btn btn-outline-secondary">dont click me</a>
       </div>
     </footer>
     <script
@@ -397,4 +397,5 @@
   </body>
 
 </html>
+
 
